Fix Overflow on long filenames

--- a/static/less/stream.less
+++ b/static/less/stream.less
@@ -44,6 +44,7 @@
             overflow:hidden;
             text-overflow:ellipsis;
             max-width: 100%;
+            display: inline-block;
         }
 
         img {
